--- a/02/index.html
+++ b/02/index.html
@@ -79,8 +79,8 @@ While the tutorial was relatively straight forward, I struggled first to underst
 I decided to use concentric circles of different diameter for my press fit construction kit. This was relatively easy to alter from my first design following the tutorial. At first, I had some trouble saving the sketch as a file that would be read by the laser cutting program. I was trying to save the sketch lines directly as a dxl file after extruding the lines (as shown in the tutorial) but I realized that I needed to reproject the sketch on a plane after extruding as shown below:
 
 <div class = "center">
-  <img src="../02/tutorial.jpg" 
-     width ="308" height="273"/>
+  <img src="../02/circle.jpg" 
+     width ="500" height="400"/>
 </div>
 
 To create the correct notch sizes I created parameters for both “halfwidth” (half of the width of cardboard using a caliper) and kerf. Once I imported it to the laser printer and printed my first iteration I found that my notches were way smaller than I had planned. This is because I was resizing my circle in the laser cutter software and was not accounting for how that how proportionally affect my notch sizes.
@@ -96,15 +96,15 @@ To allow for me to change my circle sizes easily without changing the notch size
 This worked well and my second iteration was much more of a success! However the notches were still slightly too big so I reduced the cardboard size by 0.2mm accounting for more crushed cardboard surface:
 
 <div class = "center">
-  <img src="../02/parameters1.jpg" 
+  <img src="../02/pressfit.jpg" 
      width ="300" height="400"/>
 </div>
 
 With the following parameters:
 
 <div class = "center">
-  <img src="../02/pressfit" 
-     width ="300" height="400"/>
+  <img src="../02/parameters1.jpg" 
+     width ="700" height="400"/>
 </div>
 
 Success!
@@ -116,14 +116,14 @@ At first I thought I could print the above circles in the same way and simply ad
 
 <div class = "center">
   <img src="../02/pigframe.jpg" 
-     width ="300" height="275"/>
+     width ="600" height="400"/>
 </div>
 
 However, I realized soon the the angle between the notches would be too wide for the pig to stand upright, so I had to edit all of the notch angles to 35 degrees. After playing around with the dimensions for each component and adding a face to my pig, here is my final result:
 
 <div class = "center">
   <img src="../02/pigface.jpg" 
-     width ="300" height="275"/>
+     width ="600" height="400"/>
 </div>
 
 <div class = "center">
@@ -135,7 +135,7 @@ With the following parameters: (for main circles of pig body):
 
 <div class = "center">
   <img src="../02/parameters2.jpg" 
-     width ="300" height="400"/>
+     width ="700" height="400"/>
 </div>
 
 <u>Things I would do differently</u>
