--- a/02/index.html
+++ b/02/index.html
@@ -57,7 +57,7 @@ body {background-color: rgb(232, 245, 233);}
 </style>
 
 <body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Project Proposal</h1>
+<h1 font weight=700px>Week 2:2D design and cutting</h1>
 
 <xmp style="display:none;">
 <br> 
@@ -104,7 +104,7 @@ With the following parameters:
 
 <div class = "center">
   <img src="../02/parameters1.jpg" 
-     width ="950" height="400"/>
+     width ="950" height="300"/>
 </div>
 
 Success!
@@ -135,7 +135,7 @@ With the following parameters: (for main circles of pig body):
 
 <div class = "center">
   <img src="../02/parameters2.jpg" 
-     width ="950" height="400"/>
+     width ="950" height="300"/>
 </div>
 
 <u>Things I would do differently</u>
