--- a/02/index.html
+++ b/02/index.html
@@ -182,6 +182,13 @@ I then carried out the same process with my glasses but only used the extrude fu
 I could not figure out how to edit the temples of the glasses so that they were curved and had different thickness as shown in the real glasses.
 
 
+<b> Assembly Component </b>
+For the final assembly component of this week's assignment, I decided to separate the water bottle top and body into two separate sketches. Once I did this the process of assembling was straightforward: I inserted both drawings in a new file, and used the joint function to assemble as shown below:
+
+<video width="500" height="550" controls>
+  <source src="../02/movie.mov" type="video/mov">
+  <video loop>
+</video>
 
 
 
