mp4 video update

--- a/02/index.html
+++ b/02/index.html
@@ -186,7 +186,7 @@ I could not figure out how to edit the temples of the glasses so that they were 
 For the final assembly component of this week's assignment, I decided to separate the water bottle top and body into two separate sketches. Once I did this the process of assembling was straightforward: I inserted both drawings in a new file, and used the joint function to assemble as shown below:
 
 <video width="500" height="550" controls>
-  <source src="../02/movie.mov">
+  <source src="../02/movie.mp4 type=video/mp4">
 </video>
 
 
