video fix attempt

--- a/02/index.html
+++ b/02/index.html
@@ -110,7 +110,7 @@ With the following parameters:
 Success!
 
 <b>Pig</b>
-I wanted to apply my press-fit construction skills to make a cute animal puzzle that I had played with when I was a kid. I decided to take this pig as inspiration. 
+I wanted to apply my press-fit construction skills to make a cute animal puzzle that I had played with when I was a kid. I decided to take [this](https://twohandspaperie.com/collections/craft-kits/products/jigzle-laser-cut-paper-miniature-puzzle-pig) pig as inspiration. 
 
 At first I thought I could print the above circles in the same way and simply add the frame (shown below):
 
@@ -183,9 +183,10 @@ I could not figure out how to edit the temples of the glasses so that they were 
 
 
 <b> Assembly Component </b>
+
 For the final assembly component of this week's assignment, I decided to separate the water bottle top and body into two separate sketches. Once I did this the process of assembling was straightforward: I inserted both drawings in a new file, and used the joint function to assemble as shown below:
 
-<video width="500" height="550" controls>
+<video width="500" height="550" controls loop>
   <source src="../02/movie.mp4" type="video/mp4">
 </video>
 
