--- a/02/index.html
+++ b/02/index.html
@@ -186,14 +186,15 @@ I could not figure out how to edit the temples of the glasses so that they were 
 
 For the final assembly component of this week's assignment, I decided to separate the water bottle top and body into two separate sketches. Once I did this the process of assembling was straightforward: I inserted both drawings in a new file, and used the joint function to assemble as shown below:
 
-<!--<video width="500" height="550" autoplay="autoplay" loop="true">
-  <source src="../02/movie.mp4" type="video/mp4">
+<!--<video width="500" height="550" controls>
+  <source src="movie.mp4" type="video/mp4" codecs="avc1.4d002a,mpa.40.2">
+    Your browser does not support the video tag.
 </video> -->
 
-<video width="500" height="550" autoplay>
-  <source src="../02/movie.mp4" type="video/mp4">
+<video class="w-100" autoplay loop muted>
+  <source src="../02/movie.mp4" type="video/mp4" />
 </video>
- 
+
 </xmp>
 </body>
 
