--- a/03/index.html
+++ b/03/index.html
@@ -61,7 +61,7 @@
 
 
 <div class = "center">
-  <img src="../02/tutorial.jpg" 
+  <img src="../02/tutorial.jpeg" 
      width ="570" height="300"/>
 </div>
 
@@ -82,7 +82,7 @@ Luckily, the first iteration of my sailboats and waves turned out great!
 At first I thought the simplest way to get my boats to bob up and down would be to make the central axyl completely out of wires. I tried to do this and bend the wires to include little bumps where the boats would be attached (shown below). I also attached a guiding wire to the boat and looped it around the axyl so it could move freely around the axyl. However I soon found that this sysem was too loose and my boat could not be held up by the wire. I realized I needed more structure and rigidity in my design so I switched to wooden doyles for both the axyl and the boat support.
 
 <div class = "center">
-  <img src="../03/boatswire.jpg" 
+  <img src="../03/boatswire.jpeg" 
      width ="500" height="400"/>
 </div>
 
@@ -96,7 +96,7 @@ Now that my system was considerably rigid, I found that I needed to add more cir
 The boats would get stuck occasionally as the sides supporting the platform were a little too close to the rotating system. If I get to do a second iteration of this I will definitely look into making It operate more smoothly. I glue gunned a lot of things in place as well and would like to find other ways to keep my system together.
 
 <video class="w-100" autoplay loop muted>
-  <source src="../03/boats.mp4" type="video/mp4" />
+  <source src="../03/boats.mp4" type="video/mp4" width ="500" height="300"/>
 </video>
 
 <b>Horizontal motion </b>
@@ -107,7 +107,7 @@ At first I thought that I could simply attach the waves to a doyle and attach th
 While both vertical and horizontal Components of my kinetic sculpture work the lack of exactness in design and more advanced construction means that there is a high risk for both parts to get stuck. Ultimately I still see this as a success because I have a much better understanding of how to make things move in specific directions and I was able to use the laser cutter, drill press, hand saw and many other tools during this assignment.
 
 <video class="w-100" autoplay loop muted>
-  <source src="../03/waves.mp4" type="video/mp4" />
+  <source src="../03/waves.mp4" type="video/mp4" width ="500" height="300" />
 </video>
 
 <b>Measuring voltage </b>
@@ -115,7 +115,7 @@ Without any resistors, I measured the voltage to be V= 4.28 V, suggesting that t
 
 
 <div class = "center">
-  <img src="../03/multimeter.jpg" 
+  <img src="../03/multimeter.jpeg" 
      width ="500" height="400"/>
 </div>
 
