--- a/03/index.html
+++ b/03/index.html
@@ -51,19 +51,17 @@
   </div>
 </nav>
 
+<style>
+body {background-color: rgb(232, 245, 233);}
+</style>
 
-<body>
-
+<body> class="Avantgarde" font-weight=300px align="justify">
+<h1 font weight=700px>Week 3: Hand tools and Fabrication </h1>
 
 <xmp style="display:none;">
 <br> 
 
 
-
-<div class = "center">
-  <img src="../02/tutorial.jpeg" 
-     width ="570" height="300"/>
-</div>
 
 <br>Prototyping</br>
 
@@ -116,7 +114,7 @@ Without any resistors, I measured the voltage to be V= 4.28 V, suggesting that t
 
 <div class = "center">
   <img src="../03/multimeter.jpeg" 
-     width ="500" height="400"/>
+     width ="300" height="400"/>
 </div>
 
 
