--- a/03/index.html
+++ b/03/index.html
@@ -63,11 +63,11 @@ body {background-color: rgb(232, 245, 233);}
 
 
 
-<br>Prototyping</br>
+<b>Prototyping</b>
 
 This week we were tasked with making a kinetic sculpure. I wanted to understand how to create movements both horizontally and vertically so I decided to do a simple sculpture of boats sailing at sea with the boats popping up and down and the sails moving in small circles to give the illusion that they were moving back and forth. I decided that since I wanted the vertical motion to be optional, I would create a manual lever system to control the boats while the waves would be attached to two separate gears that were moved by a principal gear attached to a motor.
 
-<br>3D printing</br>
+<b>3D printing</b>
 The design of the sails and the waves were fairly straightforward. I used the same kerfs from last week’s project and only had to measure the diameter of the wooden doyles as I wanted that to be what kept my gear in place. To create the different gears I used the built-in gear function provided by Fusion 360. This ended up proving quite complicated. I first tried to print one larger gear with 10 teeth and two smaller gears with 5 teeth, keeping the other parameters constant and hoping that would make them fit. However, because my Module (ratio of gear teeth to pitch) was quite high, the gears keep getting stuck together.
 
 
@@ -75,7 +75,7 @@ After changing the module to 5 and 6 for the big gear and small gears respective
 
 Luckily, the first iteration of my sailboats and waves turned out great!
 
-<br>Vertical Motion</br>
+<b>Vertical Motion</b>
 <u>Rotating axyl</u>
 At first I thought the simplest way to get my boats to bob up and down would be to make the central axyl completely out of wires. I tried to do this and bend the wires to include little bumps where the boats would be attached (shown below). I also attached a guiding wire to the boat and looped it around the axyl so it could move freely around the axyl. However I soon found that this sysem was too loose and my boat could not be held up by the wire. I realized I needed more structure and rigidity in my design so I switched to wooden doyles for both the axyl and the boat support.
 
