--- a/03/index.html
+++ b/03/index.html
@@ -55,7 +55,7 @@
 body {background-color: rgb(232, 245, 233);}
 </style>
 
-<body> class="Avantgarde" font-weight=300px align="justify">
+<body class="Avantgarde" font-weight=300px align="justify">
 <h1 font weight=700px>Week 3: Hand tools and Fabrication </h1>
 
 <xmp style="display:none;">
