--- a/03/index.html
+++ b/03/index.html
@@ -94,7 +94,7 @@ Now that my system was considerably rigid, I found that I needed to add more cir
 <u>Overall thoughts</u>
 The boats would get stuck occasionally as the sides supporting the platform were a little too close to the rotating system. If I get to do a second iteration of this I will definitely look into making It operate more smoothly. I glue gunned a lot of things in place as well and would like to find other ways to keep my system together.
 
-<video class="w-100" width ="500" height="300" autoplay loop muted>
+<video width ="500" height="300" autoplay loop muted>
   <source src="../03/boats.mp4" type="video/mp4" />
 </video>
 
@@ -108,7 +108,7 @@ At first I thought that I could simply attach the waves to a doyle and attach th
 
 While both vertical and horizontal Components of my kinetic sculpture work the lack of exactness in design and more advanced construction means that there is a high risk for both parts to get stuck. Ultimately I still see this as a success because I have a much better understanding of how to make things move in specific directions and I was able to use the laser cutter, drill press, hand saw and many other tools during this assignment.
 
-<video class="w-100" width ="300" height="500" autoplay loop muted>
+<video width ="300" height="500" autoplay loop muted>
   <source src="../03/waves.mp4" type="video/mp4"  />
 </video>
 
