--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -52,13 +52,90 @@
 </nav>
 
 
-<body>
+<style>
+body {background-color: rgb(232, 245, 233);}
+</style>
 
+<body class="Avantgarde" font-weight=300px align="justify">
+<h1 font weight=700px>Week 4:3D Printing</h1>
 
 <xmp style="display:none;">
 <br> 
 
-#### Final Project
+
+<b>Timeline</b>
+
+<u> Scope of each phase </u>
+
+<div class = "center">
+  <img src="../FinalProject/scope.png" 
+     width ="570" height="300"/>
+</div>
+
+Phase 1 : create a functional pump 
+- I will likely 3D print this component
+Phase 2: connect filter to pump
+Phase 3: Code and design float switch using Arduino
+Phase 4: If within scope, create turbidity probe to test water before and after filtration
+
+<b> Bill of materials </b>
+
+Things that I may need to order
+- [Float switch](https://www.gadgetronicx.com/interfacing-float-sensor-arduino/)
+o I could possibly make one myself but this seems out of the scope of this class and too complicated considering this is one of many components to my final project
+- Possible material for water filters:
+o Fine sand, charcoal, pebbles, activated carbon
+ I would like to find something more sophisticated to use like real sawyer filters but again this may be out of the scope of the project
+
+- If I make a turbidity sensor as well:
+o Particle photon
+o Laser
+o LDR
+o On/off button
+o Small resistor
+o Breadboard
+o Transparent pvc tube
+o Solder tin
+o Sealant
+o [Source](https://www.instructables.com/How-to-Make-Water-Turbidity-Sensor/)
+- Design will be modified but principal mechanism will remain the same
+Other materials:
+- DC motor
+- Wires
+- Arduino 
+
+<b> Project Plan </b>
+
+<u> Pump </u>
+
+I am planning to 3D print a functional pump. I have not yet decided what type of pump but this week I experimented with 3D printing a centrifugal pump. I believe that I will try to recreate a standard well pump such as this (LINK). My greatest challenge will be to figure out how to make the plastic waterproof. From my research, I believe coating it in Acetone may work but I don’t know if this will contaminate the water and thus defeat the purpose of my project.
+
+<u> Filter </u>
+
+I have not been able to come up with a more sophisticated design for a filter besides one such as the one in the image below (i.e a bio or sand filter). I would like to replicate a professional filter using membranes but I am unclear on how these are produced exactly and if this would be feasibly reproduced. 
+
+<div class = "center">
+  <img src="../FinalProject/filter.jpeg" 
+     width ="570" height="300"/>
+</div>
+
+
+[This](https://iwaponline.com/ws/article/19/4/1036/63760/Fiber-filter-built-with-polypropylene-fibers)paper suggests making fibers out of polypropylene. I am struggling to find a clear outline how to recreate this however, and it seems that it is not widely used at the moment. 
+
+<b> Float switch </b>
+I believe that I would need to buy a float switch device (listed above). However, I am hoping that with the Arduino that I can code the specific parameters I want for my float switch (i.e. minimum depth of water for when pump turns off).
+
+<b> Turbidity Monitor </b>
+It would be really cool to have a turbidity monitor or probe to check if my filter is really filtering out larger particles. I have only found [this](https://www.instructables.com/How-to-Make-Water-Turbidity-Sensor/) resource so far which details how to make a turbidity monitor. While I may have to order the parts, the assembly seems feasible. I would like to investigate how to make the design more compact, unlike the one shown on the site.
+
+<b> Assembly into compact device </b>
+
+Ideally, I would like all components to be encapsulated in one part, as shown in the drawing below. This may be complicated as I would have to ensure the float switch would not get tangled up around the pump.
+
+<b> Largest Concern </b>
+
+My largest concern at the moment is that a lot of the parts I require cannot be recreated without specific materials. I want my project to involve lots of building and build upon the skills from class but I also would like it to be focused on water systems. I therefore need to try to find a balance between the two. 
+
 
 
 
