--- a/04/index.html
+++ b/04/index.html
@@ -95,18 +95,19 @@ I decided to split my pump into three different components: the bottom (with spa
 
 <b>3D Printing</b>
 
-<u> First Print Test <u/>
+<u> First Print Test </u>
 
 I decided to print a small propellor to test the PRUSA printer. The slicing was fairly simple for this component since there were no overhanging parts. However, just to be safe I decided to add a  brim. The print time was around 20 minutes and the results were good! The material seemed fairly strong and rigid so I concluded that it could be used as a propellor.
 
 <div class = "center">
-  <img src="../04/complete.png" 
+  <img src="../04/first.jpg" 
      width ="570" height="300"/>
 </div>
 
-<u> Printing Parts for my centrifugal pump <u/>
+<u> Printing Parts for my centrifugal pump </u>
 
 <u> Bottom piece </u>
+
 This was my most complicated printing piece by far. For my first print I decided to put support everywhere and rotate the piece so that the bottom was were the dc motor would be placed later on. This created a print time of 3h40m. When my print was finished It was incredibly hard and time consuming to remove the slicing, especially from the circular tube (shown in previous designs). Once I had finished removing the support I realized my design had been scaled down in the printing process. I didn’t understand how this had happened at first but then I noticed that my prusa slicer software was on the mini prusa setting and not the Original Prusa MKS. This was incredibly frustrating!
 
 I reprinted the bottom piece, this time only placing support on the bottom of my component and flipping it so that the dc motor component would be printed last. This turned out much better, was faster by about an hour (2h30m), and the sizing was correct. Hooray!
@@ -121,12 +122,17 @@ This component was also straightforward and only took 41 minutes. In hindsight h
 
 <i> The final gcode and stl files for all three components (after some trials) can be found below: </i>
 
-<a download href='../04/bottom_pumo_new.stl'>Download my STL file <\a>
-<a download href='../04/propellor(new)_Layla.stl'>Download my STL file <\a>
-<a download href='../04/top_pump.stl'>Download my STL file <\a>
-<a download href='../04/propellor(new).gcode'>Download my STL file <\a>
-<a download href='../04/bottom_pump_(new2).gcode'>Download my STL file <\a>
-<a download href='../04/top_pump(new)Layla.gcode'>Download my STL file <\a>
+<a download href='../04/bottom_pumo_new.stl'>Download my STL file </a>
+
+<a download href='../04/propellor(new)_Layla.stl'>Download my STL file </a>
+
+<a download href='../04/top_pump.stl'>Download my STL file </a>
+
+<a download href='../04/propellor(new).gcode'>Download my STL file </a>
+
+<a download href='../04/bottom_pump_(new2).gcode'>Download my STL file </a>
+
+<a download href='../04/top_pump(new)Layla.gcode'>Download my STL file </a>
 
 <b>Lessons learnt with slicing:</b>
 
@@ -143,12 +149,7 @@ This component was also straightforward and only took 41 minutes. In hindsight h
 </video>
 
 <div class = "center">
-  <img src="../04/bottom.png" 
-     width ="570" height="300"/>
-</div>
-
-<div class = "center">
-  <img src="../04/complete.png" 
+  <img src="../04/final.jpg" 
      width ="570" height="300"/>
 </div>
 
@@ -161,6 +162,8 @@ I first tried to use the polycam 3d app scanner from the Appstore. This turned o
 After I decided to use the Sense scanner in class. This was much more sophisticated and worked much better as shown below. I decided to scan something that looked like a potential body part I could use for pump design in the future. If I can scan shapes like this and import them as stls this will save me a lot of time designing in fusion!
 
 The stl file can be downloaded here:
+<a download href='../04/Layla.stl'>Download my STL file </a>
+
 
 
 <u> The Final project updates can be found on the final project page </u>
