images resized, links fixed

--- a/04/index.html
+++ b/04/index.html
@@ -93,6 +93,7 @@ I decided to split my pump into three different components: the bottom (with spa
 
 
 
+
 <b>3D Printing</b>
 
 <u> First Print Test </u>
@@ -101,7 +102,7 @@ I decided to print a small propellor to test the PRUSA printer. The slicing was 
 
 <div class = "center">
   <img src="../04/first.jpg" 
-     width ="570" height="300"/>
+     width ="450" height="300"/>
 </div>
 
 <u> Printing Parts for my centrifugal pump </u>
@@ -122,17 +123,17 @@ This component was also straightforward and only took 41 minutes. In hindsight h
 
 <i> The final gcode and stl files for all three components (after some trials) can be found below: </i>
 
-<a download href='../04/bottom_pumo_new.stl'>Download my STL file </a>
+<a download href='../04/bottom_pumo_new.stl'>Download STL file for bottom pump component </a>
 
-<a download href='../04/propellor(new)_Layla.stl'>Download my STL file </a>
+<a download href='../04/propellor(new)_Layla.stl'>Download STL file for propellor component </a>
 
-<a download href='../04/top_pump.stl'>Download my STL file </a>
+<a download href='../04/top_pump.stl'>Download STL file for top pump component </a>
 
-<a download href='../04/propellor(new).gcode'>Download my STL file </a>
+<a download href='../04/propellor(new).gcode'>Download my gcode for propellor slicing </a>
 
-<a download href='../04/bottom_pump_(new2).gcode'>Download my STL file </a>
+<a download href='../04/bottom_pump_(new2).gcode'>Download my gcode for bottom component slicing </a>
 
-<a download href='../04/top_pump(new)Layla.gcode'>Download my STL file </a>
+<a download href='../04/top_pump(new)Layla.gcode'>Download my gcode for top component slicing </a>
 
 <b>Lessons learnt with slicing:</b>
 
@@ -150,7 +151,7 @@ This component was also straightforward and only took 41 minutes. In hindsight h
 
 <div class = "center">
   <img src="../04/final.jpg" 
-     width ="570" height="300"/>
+     width ="500" height="300"/>
 </div>
 
 <b> Scanning </b>
@@ -162,11 +163,12 @@ I first tried to use the polycam 3d app scanner from the Appstore. This turned o
 After I decided to use the Sense scanner in class. This was much more sophisticated and worked much better as shown below. I decided to scan something that looked like a potential body part I could use for pump design in the future. If I can scan shapes like this and import them as stls this will save me a lot of time designing in fusion!
 
 The stl file can be downloaded here:
-<a download href='../04/Layla.stl'>Download my STL file </a>
+
+<a download href='../04/Layla.stl'>Download STL file for scanning result </a>
 
 
 
-<u> The Final project updates can be found on the final project page </u>
+<u> The [Final project](../FinalProject/index.html) updates can be found on the final project page </u>
 
 </xmp>
 </body>
