--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -57,7 +57,7 @@ body {background-color: rgb(232, 245, 233);}
 </style>
 
 <body class="Avantgarde" font-weight=300px align="justify">
-<h1 font weight=700px>Week 4:3D Printing</h1>
+<h1 font weight=700px>Final Project: Planning</h1>
 
 <xmp style="display:none;">
 <br> 
@@ -69,7 +69,7 @@ body {background-color: rgb(232, 245, 233);}
 
 <div class = "center">
   <img src="../FinalProject/scope.png" 
-     width ="570" height="300"/>
+     width ="750" height="300"/>
 </div>
 
 Phase 1 : create a functional pump 
@@ -88,16 +88,16 @@ o Fine sand, charcoal, pebbles, activated carbon
  I would like to find something more sophisticated to use like real sawyer filters but again this may be out of the scope of the project
 
 - If I make a turbidity sensor as well:
-o Particle photon
-o Laser
-o LDR
-o On/off button
-o Small resistor
-o Breadboard
-o Transparent pvc tube
-o Solder tin
-o Sealant
-o [Source](https://www.instructables.com/How-to-Make-Water-Turbidity-Sensor/)
+- Particle photon
+- Laser
+- LDR
+- On/off button
+- Small resistor
+- Breadboard
+- Transparent pvc tube
+- Solder tin
+- Sealant
+- [Source](https://www.instructables.com/How-to-Make-Water-Turbidity-Sensor/)
 - Design will be modified but principal mechanism will remain the same
 Other materials:
 - DC motor
@@ -115,8 +115,8 @@ I am planning to 3D print a functional pump. I have not yet decided what type of
 I have not been able to come up with a more sophisticated design for a filter besides one such as the one in the image below (i.e a bio or sand filter). I would like to replicate a professional filter using membranes but I am unclear on how these are produced exactly and if this would be feasibly reproduced. 
 
 <div class = "center">
-  <img src="../FinalProject/filter.jpeg" 
-     width ="570" height="300"/>
+  <img src="../FinalProject/filter.jpg" 
+     width ="300" height="300"/>
 </div>
 
 
