--- a/05/index.html
+++ b/05/index.html
@@ -171,8 +171,13 @@ Here is my circuit from the breadboard:
 I didn’t get to experiment with replacing delay function with millis since there wasn’t any need for delays in my function, but I will be experimenting with this next week!
 
 Final product:
-[Video] button function
-[Video] Phototransistor 
+<video width ="300" height="500" autoplay loop muted>
+  <source src="../05/vid2.mp4" type="video/mp4"  />
+</video>
+
+<video width ="300" height="500" autoplay loop muted>
+  <source src="../05/vid1.mp4" type="video/mp4"  />
+</video> 
 
 
 </xmp>
